# ubuntu-task-manager

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  AUDIT_FINAL.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  ISSUES.md  LICENSE  README.md  SECURITY.md  analyze_db.py  audit_1.md  audit_2.md  docker-compose.yml  pyproject.toml  release-please-config.json  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml
cache/: bans_db.json  ip_geo_cache.json  suspicious_ips.json  suspicious_ips.txt  whitelist.json
config/: config.yaml  config.yaml.backup
data/: attacks.db.json  attacks.db.json.bak
docs/: CHANGELOG.md  CHANGELOG.old.md  CRON_MONITORING.md  EXAMPLES.md  GEMINI.md  QUICKSTART.md  README.md  logging_refactoring.md
docs/examples/: ci.yml
logs/: utm.log.bak2
scripts/: analyze_f2b.py  install.sh  reinstall.sh  run.sh  uninstall.sh
src/: const.py  debug_docker.py  list_tasks.py  main.py  mem_stress.py
src/collectors/: __init__.py  base.py  fail2ban.py  fail2ban_client.py  fail2ban_v2.py  network.py  processes.py  services.py  system.py  tasks.py  users.py
src/dashboard/: __init__.py  app.py  style.tcss
src/dashboard/widgets/: __init__.py  analysis_modal.py  confirm_modal.py  container_log_modal.py  containers.py  disk_details_modal.py  disks.py  f2b_db_manage_modal.py  fail2ban.py  fail2ban_plus.py  fstab_modal.py  logging.py  mount_modal.py  (+9 more)
src/database/: __init__.py  attacks_db.py
src/models/: __init__.py  fail2ban.py
src/utils/: binaries.py  formatters.py  logger.py  process_cache.py  ui.py  ui_helpers.py
tests/: test_app.py  test_attacks_db.py  test_base.py  test_binaries.py  test_dashboard_app.py  test_fail2ban.py  test_fail2ban_client.py  test_fail2ban_models.py  test_fail2ban_v2.py  test_formatters.py  test_full_suite.py  test_integrity.py  test_logger.py  test_main.py  test_network.py  test_network_extended.py  test_process_cache.py  test_processes.py  test_services.py  test_services_extended.py  test_system.py  test_tasks.py  test_ui_helpers.py  test_users.py  test_widgets_import.py
