[project]
name = "ubuntu-task-manager"
version = "2.2.0"
description = "TUI dashboard for monitoring and managing Ubuntu/Linux servers"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"

[tool.black]
line-length = 120
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.venv
    | venv
    | __pycache__
    | build
    | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 120
skip = [".git", "venv", ".venv", "__pycache__"]
known_first_party = ["src", "collectors", "dashboard", "utils"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
exclude = ["venv", ".venv", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv"]
skips = ["B404", "B603", "B310", "B110", "B607"]  # subprocess, urlopen, try_except_pass (UI graceful degradation), partial_path (system commands)
